--- a/nvim/lua/Antoine/todo
+++ b/nvim/lua/Antoine/todo
@@ -2,3 +2,13 @@
 setup debugging for cpp
 using scrollbar plugin ???
 final touch
+
+plugins :
+yanky
+sceptre
+windows
+symbols outline
+folke/styler
+theprimagen/refactoring
+persistence??????
+PEEK.nvim
